tables: existing bugs: 1- single column table caption on top 2- single column table th's vertically aligned

--- a/css/ccap-biology.less
+++ b/css/ccap-biology.less
@@ -400,15 +400,15 @@ p{
  ******************************************************/
 .table{ 
   
-  table{ border-style: none !important; }
+  /*table{ border-style: none !important; }
     
-  tbody, th{
+  table, tbody, th{
     margin: 0;
     padding: 0;
     display: block;
     table-layout: fixed;
     max-width: @column;
-  }    
+  } */   
    
   
   &.span-all{ 
@@ -417,7 +417,7 @@ p{
       margin: 0;
       padding:0;
       border-style:none !important;
-    }
+     }
   }
 
   th{
@@ -428,7 +428,7 @@ p{
     border-top:1pt solid @green !important;
     border-bottom:1pt solid @green !important;
     text-align: center !important;
-    display: block;
+    border-collapse: collapse !important;
   }
   
   tr:first-child > th:first-child { 
@@ -440,7 +440,16 @@ p{
     border-style: none !important; 
     background-color: transparent !important;
   }
+  
+  caption{
+    padding-top: .5em;
+    padding-bottom: 1em;    
+    font-weight:bold;
+    color: @green;
+    caption-side:bottom !important;
+  }
 }
+
 
 
 /******************************************************
